# rust-opa-wasm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  features.txt  opa-caps.json
.github/: dependabot.yml
.github/workflows/: check.yaml  release-plz.yml
playground/hello/: build.sh  eval.sh  policy.wasm  rule.rego
src/: context.rs  funcs.rs  lib.rs  loader.rs  policy.rs  types.rs
src/builtins/: mod.rs  traits.rs
src/builtins/impls/: base64url.rs  crypto.rs  glob.rs  graph.rs  graphql.rs  hex.rs  http.rs  io.rs  json.rs  mod.rs  net.rs  object.rs  opa.rs  rand.rs  regex.rs  rego.rs  semver.rs  time.rs  units.rs  urlquery.rs  uuid.rs  yaml.rs
src/builtins/impls/snapshots/: opa_wasm__builtins__impls__tests__can_sprintf-2.snap  opa_wasm__builtins__impls__tests__can_sprintf-3.snap  opa_wasm__builtins__impls__tests__can_sprintf-4.snap  opa_wasm__builtins__impls__tests__can_sprintf.snap
tests/: smoke_test.rs
tests/fixtures/: test-http.rego  test-loader.rego  test-loader.true.json  test-rand.rego  test-time.rego  test-units.rego  test-urlquery.rego  test-yaml.rego
tests/infra-fixtures/: test-extras.rego  test-glob.rego  test-loader.false.json  test-loader.rego  test-object.rego  test-rand.rego  test-regex.rego  test-time.rego  test-units.rego  test-urlquery.rego  test-uuid.rego  test-yaml.rego
tests/snapshots/: smoke_test__cycle@test-loader-test-loader.false.snap  smoke_test__cycle@test-loader-test-loader.true.snap  smoke_test__extras.snap  smoke_test__glob.snap  smoke_test__loader_empty.snap  smoke_test__loader_false.snap  smoke_test__loader_true.snap  smoke_test__ltime.snap  smoke_test__object.snap  smoke_test__rand.snap  smoke_test__regex.snap  smoke_test__time.snap  smoke_test__units.snap  smoke_test__urlquery.snap  smoke_test__uuid.snap  smoke_test__yaml.snap  smoke_test__yaml.snap.new
