[package]
name = "opa-wasm"
version = "0.1.0"
rust-version = "1.60"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
default-run = "opa-eval"

[dependencies]
anyhow = "1.0.65"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["sync", "macros"] }
tracing = "0.1.37"
wasmtime = { version = "1.0.1", default-features = false, features = ["async"] }

# Loader
tokio-tar = { version = "0.3.0", optional = true }
async-compression = { version = "0.3.15", optional = true, features = ["tokio", "gzip"] }
futures-util = { version = "0.3.25", optional = true }

# CLI
camino = { version = "1.1.1", optional = true }
clap = { version = "4.0.17", features = ["derive"], optional = true }
tracing-forest = { version = "0.1.4", optional = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"], optional = true }

# Builtins
base64 = { version = "0.13.1", optional = true }
digest = { version = "0.10.5", optional = true }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
json-patch = { version = "0.2.6", optional = true }
md-5 = { version = "0.10.5", optional = true }
rand = { version = "0.8.5", optional = true }
semver = { version = "1.0.14", optional = true }
sha1 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.6", optional = true }
sprintf = { version = "0.1.3", optional = true }
parse-size = { version = "1.0.0", features = ["std"], optional = true }
serde_yaml = { version = "0.9.13", optional = true }

[dev-dependencies.tokio]
version = "1.21.2"
features = ["macros", "fs", "rt", "rt-multi-thread"]

[dev-dependencies]
wasmtime= "1.0.1"
insta = { version = "1.21.0", features = ["yaml"] }
rstest = "0.15.0"

[features]
default = ["all-builtins"]

loader = [
  "dep:tokio-tar",
  "dep:async-compression",
  "dep:futures-util",
  "tokio/fs",
  "tokio/io-util",
]

cli = [
  "loader",
  "dep:camino",
  "dep:clap",
  "dep:tracing-forest",
  "dep:tracing-subscriber",
  "tokio/fs",
  "tokio/rt-multi-thread",
  "wasmtime/cranelift",
  "wasmtime/parallel-compilation",
  "wasmtime/memory-init-cow",
]

rng = ["dep:rand"]

base64url-builtins = ["dep:base64", "dep:hex"]
crypto-digest-builtins = ["dep:digest", "dep:hex"]
crypto-hmac-builtins = ["dep:hmac", "dep:hex"]
crypto-md5-builtins = ["dep:md-5"]
crypto-sha1-builtins = ["dep:sha1"]
crypto-sha2-builtins = ["dep:sha2"]
hex-builtins = ["dep:hex"]
semver-builtins = ["dep:semver"]
sprintf-builtins = ["dep:sprintf"]
json-builtins = ["dep:json-patch"]
units-builtins = ["dep:parse-size"]
rand-builtins = ["rng"]
yaml-builtins = ["dep:serde_yaml"]

all-crypto-builtins = [
  "crypto-digest-builtins",
  "crypto-hmac-builtins",
  "crypto-md5-builtins",
  "crypto-sha1-builtins",
  "crypto-sha2-builtins",
]

all-builtins = [
  "all-crypto-builtins",
  "base64url-builtins",
  "hex-builtins",
  "json-builtins",
  "rand-builtins",
  "semver-builtins",
  "sprintf-builtins",
  "units-builtins",
  "yaml-builtins",
]

[[test]]
name = "smoke_test"
required-features = ["loader"]

[[bin]]
name = "opa-eval"
required-features = ["cli"]

[[bin]]
name = "simple"
required-features = ["cli"]
